--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ function strReplace(haystack, needle, replacement) {
       </div>
       <div class="empresas wf-section">
         <div class="container-4 w-container"><img src="images/produzido.svg" width="238" alt="" class="image-6">
-          <a href="https://www.unirios.edu.br" target="_blank" class="link-block-6 w-inline-block"><img src="images/logo-instituicao.svg" width="160" alt=""></a>
+          <a href="https://www.puc-campinas.edu.br/" target="_blank" class="link-block-6 w-inline-block"><img src="images/logo-instituicao.svg" width="160" alt=""></a>
           <a href="https://www.b42.com.br/" target="_blank" class="link-block-5 w-inline-block"><img src="images/b42.svg" width="160" alt="" class="image-7"></a>
         </div>
       </div>
